Update CIRCUIT PROTECTION
Circuit Protection amount of busbars changes when the amount of chassis poles is chosen.
Functionality of event listeners for circuit protection is not really working at this stage.

--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
           <a href="#" class="active" data-breadcrumb="1">Initial Setup</a>
           <a href="#" data-breadcrumb="2">Features</a>
           <a href="#" data-breadcrumb="3">Construction</a>
-          <a href="#" data-breadcrumb="4">Summary</a>
+          <a href="#" data-breadcrumb="4">Circuit Protection</a>
           <a href="#" data-breadcrumb="5">Contact Information</a>
           <a href="#" data-breadcrumb="6">Confirmation</a>
         </div>
@@ -405,7 +405,248 @@
       </div>
     </section>
     <section class="section pt-0 is-hidden" data-content="4">
-      <h2 class="subtitle is-3">Summary</h2>
+      <h2 class="subtitle is-3">Circuit Protection</h2>
+      <div class="block">
+        <div class="columns" id="circuit-protection-columns">
+          <div class="column is-2">
+            <div class="bccontainer">
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="1"
+              >
+                Outside Lighting
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="2"
+              >
+                *
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="3"
+              >
+                *
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="4"
+              >
+                *
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="5"
+              >
+                *
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="6"
+              >
+                *
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="7"
+              >
+                *
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="8"
+              >
+                *
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="9"
+              >
+                *
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="10"
+              >
+                *
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="11"
+              >
+                *
+              </div>
+              <div
+                style="visibility: hidden"
+                contenteditable="true"
+                class="phase itemTypeName Poles1"
+                data-circuit-number="12"
+              >
+                *
+              </div>
+            </div>
+          </div>
+          <div class="column is-1">
+            <div class="bccontainer">
+              <div
+                class="phase itemType empty"
+                data-circuit-number="1"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="2"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="3"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="4"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="5"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="6"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="7"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="8"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="9"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="10"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="11"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+              <div
+                class="phase itemType empty"
+                data-circuit-number="12"
+                data-block-size="1"
+                data-circuit-protection="0"
+              >
+                empty
+              </div>
+            </div>
+          </div>
+          <div class="column is-1">
+            <div class="bccontainer">
+              <div class="phase redphase">1</div>
+              <div class="phase whitephase">2</div>
+              <div class="phase bluephase">3</div>
+              <div class="phase redphase">4</div>
+              <div class="phase whitephase">5</div>
+              <div class="phase bluephase">6</div>
+              <div class="phase redphase">7</div>
+              <div class="phase whitephase">8</div>
+              <div class="phase bluephase">9</div>
+              <div class="phase redphase">10</div>
+              <div class="phase whitephase">11</div>
+              <div class="phase bluephase">12</div>
+            </div>
+          </div>
+          <div class="column is-1">
+            <div class="bccontainer">
+              <div class="phase redphase">13</div>
+              <div class="phase whitephase">14</div>
+              <div class="phase bluephase">15</div>
+              <div class="phase redphase">16</div>
+              <div class="phase whitephase">17</div>
+              <div class="phase bluephase">18</div>
+              <div class="phase redphase">19</div>
+              <div class="phase whitephase">20</div>
+              <div class="phase bluephase">21</div>
+              <div class="phase redphase">22</div>
+              <div class="phase whitephase">23</div>
+              <div class="phase bluephase">24</div>
+            </div>
+          </div>
+          <div class="column is-1"></div>
+          <div class="column"></div>
+        </div>
+      </div>
+    </section>
+    <section class="section pt-0 is-hidden" data-content="5">
+      <h2 class="subtitle is-3">Contact Information</h2>
       <div class="container is-fluid">
         <div class="notification is-primary">
           This container is <strong>fluid</strong>: it will have a 32px gap on
@@ -415,11 +656,16 @@
         <div class="block">This text is within a <strong>block</strong>.</div>
       </div>
     </section>
-    <section class="section pt-0 is-hidden" data-content="5">
-      <h2 class="subtitle is-3">Contact Information</h2>
-    </section>
     <section class="section pt-0 is-hidden" data-content="6">
       <h2 class="subtitle is-3">Confirmation</h2>
+      <div class="container is-fluid">
+        <div class="block">This text is within a <strong>block</strong>.</div>
+        <div class="block">This text is within a <strong>block</strong>.</div>
+        <div class="notification is-primary">
+          This container is <strong>fluid</strong>: it will have a 32px gap on
+          either side, on any viewport size.
+        </div>
+      </div>
     </section>
   </body>
   <script src="panelboard.js"></script>
